# ai-api-nucleo

./: .gitignore  main.py  pyproject.toml  query.sh  scraper.py
docs/ideas_gemini_databases/: planaccion.txt  primera_respuesta.txt  recomendacion_datasets_RAG.txt
prompts/: expert_rag_template.txt
scripts/: ingest_data.py  loaders.py
src/: config.py
src/api/v1/: query.py
src/core/: pipeline_manager.py  pipelines.py  strategies.py
src/services/: document_store.py
